syntax = "proto2";

package protos.soc;

import "soc/board.proto";
import "soc/inventory.proto";

enum TurnPhase {
    ROLL = 0;
    BUY_TRADE_OR_END = 1;
}

message Player {
    required string name = 1;
    required int32 position = 2;
}

message PublicPlayerState {
    required Player player = 1;
    required int32 points = 2;
    required PublicInventory public_inventory = 3;
    required int32 longest_roads = 6;
    required int32 num_knights = 7;
    required bool has_longest = 8;
    required bool has_largest = 9;
}

message PublicGameState {
    required Board board = 1;
    map<int32, PublicPlayerState> player_states = 2;
    repeated ResourceCount resource_bank = 3;
    required int32 development_cards_left = 4;
    required Player current_turn_player = 5;
    required TurnPhase phase = 6;
    required int32 turn = 7;
}